# TingMusic

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/tingmusic/: MainActivity.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: ic_launcher_background.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
android/gradle/: libs.versions.toml
docs/superpowers/plans/: 2026-05-09-tingmusic.md  2026-06-16-android-01-mac-sync-server.md  2026-06-16-android-02-sync-engine.md  2026-06-16-android-03-playback.md  2026-06-18-android-v2-netease-ui.md  2026-06-19-android-redblack-ui.md
docs/superpowers/specs/: 2026-05-09-tingmusic-design.md  2026-06-16-tingmusic-android-design.md  2026-06-18-tingmusic-android-v2-design.md  2026-06-19-android-redblack-design.md
scripts/: lrc_to_hiragana.py  make_icon.py
src/: App.css  App.tsx  store.test.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  cover_fetch.rs  lib.rs  lyrics.rs  main.rs  mdns_advertise.rs  player.rs  scanner.rs  sync_server.rs  types.rs
src/components/: Lyrics.test.tsx  Lyrics.tsx  NowPlaying.test.tsx  NowPlaying.tsx  Playlist.test.tsx  Playlist.tsx  Progress.tsx  Settings.tsx  Tabs.tsx
src/lib/: api.test.ts  api.ts  types.ts
(+34 files in other folders)
