[package]
name = "tingmusic"
version = "0.1.0"
edition = "2021"

[lib]
name = "tingmusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
walkdir = "2"
lofty = "0.21"
rodio = { version = "0.22", default-features = false, features = ["playback", "symphonia-all"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros", "net"] }
parking_lot = "0.12"
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = "2"
axum = "0.7"
mdns-sd = "0.11"
local-ip-address = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[dev-dependencies]
tempfile = "3"
